lwc updates to select and view resume. vf and controller class updates to view resume as pdf.

--- a/force-app/main/default/lwc/viewresume/viewresume.html
+++ b/force-app/main/default/lwc/viewresume/viewresume.html
@@ -7,8 +7,8 @@
     
     <!-- Optional placeholder when hidden -->
     <template if:false={showDetails}>
-        <div class="slds-m-top_medium">
-            <lightning-card title="Resume Selected:" icon-name="utility:preview">
+        <div class="slds-m-top_small">
+            <lightning-card title="Your Resume Will Be Displayed Here" icon-name="utility:preview">
                 <div class="slds-p-around_small slds-text-color_weak">
                 Pick a profile and resume to see details.
                 </div>
@@ -17,7 +17,6 @@
     </template>
 
     <template if:true={showDetails}>
-        <p> Display Resume {selectedResumeId} </p>
         <c-displayresume resume-id={selectedResumeId}></c-displayresume>
     </template>
 
