--- a/force-app/main/default/lwc/viewresume/viewresume.html
+++ b/force-app/main/default/lwc/viewresume/viewresume.html
@@ -7,9 +7,9 @@
     
     <!-- Optional placeholder when hidden -->
     <template if:false={showDetails}>
-        <div class="slds-m-top_small">
+        <div class="slds-var-m-top_small">
             <lightning-card title="Your Resume Will Be Displayed Here" icon-name="utility:preview">
-                <div class="slds-p-around_small slds-text-color_weak">
+                <div class="slds-var-p-around_small slds-text-color_weak">
                 Pick a profile and resume to see details.
                 </div>
             </lightning-card>
