Improve resume creation/edit flow; add service, cleanup UI
- Add BYROS_ResumeEducationService Apex class and tab for Manage Resumes
- Enhance Aura override: support recordId via attribute, robust param handling, and proper c__-scoped state when navigating to Create_Resume tab
- Refine LWC steps (basic info, education, skills, work, certs): UI text tweaks, placeholders, and form handling updates
- Update Resume__c object and My Resumes list view metadata
- Remove package.xml and add scripts directory

Why: Ensure reliable deep-linking/edit mode detection, improve user experience in the resume wizard, and introduce backend service for education handling.

--- a/force-app/main/default/lwc/basicinfostep/basicinfostep.html
+++ b/force-app/main/default/lwc/basicinfostep/basicinfostep.html
@@ -1,5 +1,7 @@
 <template>
-    <lightning-card title="Basic Information" icon-name="standard:contact" variant="narrow">
+            <!--Placeholder Text-->
+            <p class="slds-text-color_weak slds-m-vertical_small">{placeholder}</p>
+    <lightning-card title="Basic Information Card" icon-name="standard:contact" variant="narrow">
         <div class="slds-p-around_medium">
             <!-- Resume form -->
             <lightning-record-edit-form object-api-name="Resume__c" record-id={resumeId}>
@@ -9,7 +11,7 @@
                     <!-- Profile lookup -->
                     <lightning-input-field field-name="Profile__c" required></lightning-input-field>
                     <!-- Summary field -->
-                    <lightning-input-field field-name="Summary__c" required></lightning-input-field>
+                    <lightning-input-field field-name="Summary__c" variant="standard" required></lightning-input-field>
                 </div>
             </lightning-record-edit-form>
         </div>
