--- a/force-app/main/default/lwc/createresume/createresume.html
+++ b/force-app/main/default/lwc/createresume/createresume.html
@@ -4,7 +4,11 @@
     <template if:true={isLoading}>
         <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
     </template>
-        
+
+    <!--Placeholder Text-->
+    <p class="slds-text-color_weak slds-m-vertical_small">{placeholder}</p>
+    
+
     <lightning-card title="Resume Wizard" icon-name="standard:article" variant="narrow">
         <div class="slds-p-horizontal_medium slds-p-vertical_small"> 
 
