Improve resume flow navigation, data refresh, and Education UI
- Remove cacheable=true from Apex @AuraEnabled methods to prevent stale Education data
- Handle step clicks in Create Resume path (add onclick) for better UX
- Add row action handling in Education datatable and introduce Education compact layout
- Update Education__c metadata accordingly

--- a/force-app/main/default/lwc/createresume/createresume.html
+++ b/force-app/main/default/lwc/createresume/createresume.html
@@ -37,7 +37,9 @@
                         type="path"
                         variant="base"
                         has-error={hasStepError}
-                        onchange={handleStepChange}>
+                        onchange={handleStepChange}
+                        onclick={handleStepChange}
+                        on>
                     <lightning-progress-step label="Basic Information" value="basic"></lightning-progress-step>
                     <lightning-progress-step label="Education" value="education"></lightning-progress-step>
                     <lightning-progress-step label="Work Experience" value="work"></lightning-progress-step>
