--- a/force-app/main/default/lwc/certsstep/certsstep.html
+++ b/force-app/main/default/lwc/certsstep/certsstep.html
@@ -1,15 +1,79 @@
 <template>
-    <!-- Show messages -->
-    <lightning-messages>
-        <template if:true={toastMessage}>
-            <div class="slds-notify slds-notify_toast slds-theme_{toastSeverity}
-                slds-notify_alert slds-theme_{toastSeverity} slds-m-bottom_small" role="status">
-                <span class="slds-assistive-text">{toastSeverity}</span>
-                <h2 class="slds-truncate">{toastMessage}</h2>
-            </div>
-        </template>
-    </lightning-messages>
+    <lightning-card title="Certifications" icon-name="standard:certification" variant="narrow">
+        <div class="slds-p-around_medium">
 
-    <lightning-card title="Certifications" icon-name="standard:contact" variant="narrow">
+            <!-- Selected Certifications -->
+            <div class="slds-m-bottom_medium">
+                <div class="slds-grid slds-grid_align-spread slds-m-bottom_small">
+                    <h3 class="slds-text-heading_small">Certifications on This Resume</h3>
+                    <lightning-button variant="brand" 
+                                      label="Create New Certification" 
+                                      icon-name="utility:add"
+                                      onclick={handleCreateNew}>
+                    </lightning-button>
+                </div>
+                
+                <template if:true={selectedCertifications.length}>
+                    <lightning-datatable key-field="Id"
+                                         data={selectedCertifications}
+                                         columns={selectedColumns}
+                                         onrowaction={handleRowAction}
+                                         hide-checkbox-column>
+                    </lightning-datatable>
+                </template>
+                <template if:false={selectedCertifications.length}>
+                    <p class="slds-text-color_weak slds-p-vertical_small">No certifications added yet.</p>
+                </template>
+            </div>
+
+            <lightning-layout multiple-rows>
+                <lightning-layout-item size="12">
+                    <div class="slds-border_top slds-p-top_medium">
+                        <h3 class="slds-text-heading_small slds-m-bottom_small">Available Certifications</h3>
+                        
+                        <template if:true={availableCertifications.length}>
+                            <lightning-datatable key-field="Id"
+                                                 data={availableCertifications}
+                                                 columns={availableColumns}
+                                                 onrowaction={handleRowAction}
+                                                 hide-checkbox-column>
+                            </lightning-datatable>
+                        </template>
+                        <template if:false={availableCertifications.length}>
+                            <p class="slds-text-color_weak slds-p-vertical_small">No available certifications found.</p>
+                        </template>
+                    </div>
+                </lightning-layout-item>
+            </lightning-layout>
+
+        </div>
     </lightning-card>
+
+    <!-- Create Certification Modal -->
+    <template if:true={showModal}>
+        <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" 
+                            title="Close" onclick={handleCloseModal}>
+                        <lightning-icon icon-name="utility:close" alternative-text="close" size="small"></lightning-icon>
+                    </button>
+                    <h2 class="slds-text-heading_medium">Create Certification</h2>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium">
+                    <lightning-record-edit-form object-api-name="Certification__c" 
+                                                onsuccess={handleCertificationCreated}>
+                        <lightning-input-field field-name="Name" required></lightning-input-field>
+                        <lightning-input-field field-name="Issuer__c"></lightning-input-field>
+                        <lightning-input-field field-name="Date_Achieved__c"></lightning-input-field>
+                        <div class="slds-m-top_medium">
+                            <lightning-button variant="neutral" label="Cancel" onclick={handleCloseModal}></lightning-button>
+                            <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
+                        </div>
+                    </lightning-record-edit-form>
+                </div>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
 </template>
