--- a/force-app/main/default/lwc/createresume/createresume.html
+++ b/force-app/main/default/lwc/createresume/createresume.html
@@ -37,9 +37,7 @@
                         type="path"
                         variant="base"
                         has-error={hasStepError}
-                        onchange={handleStepChange}
-                        onclick={handleStepChange}
-                        on>
+                        onchange={handleStepChange}>
                     <lightning-progress-step label="Basic Information" value="basic"></lightning-progress-step>
                     <lightning-progress-step label="Education" value="education"></lightning-progress-step>
                     <lightning-progress-step label="Work Experience" value="work"></lightning-progress-step>
