--- a/force-app/main/default/lwc/workexperiencestep/workexperiencestep.html
+++ b/force-app/main/default/lwc/workexperiencestep/workexperiencestep.html
@@ -1,15 +1,111 @@
 <template>
-    <!-- Show messages -->
-    <lightning-messages>
-        <template if:true={toastMessage}>
-            <div class="slds-notify slds-notify_toast slds-theme_{toastSeverity}
-                slds-notify_alert slds-theme_{toastSeverity} slds-m-bottom_small" role="status">
-                <span class="slds-assistive-text">{toastSeverity}</span>
-                <h2 class="slds-truncate">{toastMessage}</h2>
-            </div>
-        </template>
-    </lightning-messages>
+    <lightning-card title="Work Experience" icon-name="standard:work_order" variant="narrow">
+        <div class="slds-p-around_medium">
 
-    <lightning-card title="Work Experience" icon-name="standard:contact" variant="narrow">
+            <!-- Selected Work Experiences -->
+            <div class="slds-m-bottom_medium">
+                <div class="slds-grid slds-grid_align-spread slds-m-bottom_small">
+                    <h3 class="slds-text-heading_small">Work Experience on This Resume</h3>
+                    <lightning-button variant="brand" 
+                                      label="Create New Work Experience" 
+                                      icon-name="utility:add"
+                                      onclick={handleCreateNew}>
+                    </lightning-button>
+                </div>
+                
+                <template if:true={selectedExperiences.length}>
+                    <lightning-datatable key-field="Id"
+                                         data={selectedExperiences}
+                                         columns={selectedColumns}
+                                         onrowaction={handleRowAction}
+                                         hide-checkbox-column>
+                    </lightning-datatable>
+                </template>
+                <template if:false={selectedExperiences.length}>
+                    <p class="slds-text-color_weak slds-p-vertical_small">No work experiences added yet.</p>
+                </template>
+            </div>
+
+            <lightning-layout multiple-rows>
+                <lightning-layout-item size="12">
+                    <div class="slds-border_top slds-p-top_medium">
+                        <h3 class="slds-text-heading_small slds-m-bottom_small">Available Work Experiences</h3>
+                        
+                        <template if:true={availableExperiences.length}>
+                            <lightning-datatable key-field="Id"
+                                                 data={availableExperiences}
+                                                 columns={availableColumns}
+                                                 onrowaction={handleRowAction}
+                                                 hide-checkbox-column>
+                            </lightning-datatable>
+                        </template>
+                        <template if:false={availableExperiences.length}>
+                            <p class="slds-text-color_weak slds-p-vertical_small">No available work experiences found.</p>
+                        </template>
+                    </div>
+                </lightning-layout-item>
+            </lightning-layout>
+
+        </div>
     </lightning-card>
+
+    <!-- Create Work Experience Modal -->
+    <template if:true={showModal}>
+        <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" 
+                            title="Close" onclick={handleCloseModal}>
+                        <lightning-icon icon-name="utility:close" alternative-text="close" size="small"></lightning-icon>
+                    </button>
+                    <h2 class="slds-text-heading_medium">Create Work Experience</h2>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium">
+                    <lightning-record-edit-form object-api-name="Work_Experience__c" 
+                                                onsuccess={handleExperienceCreated}>
+                        <lightning-input-field field-name="Name" required></lightning-input-field>
+                        <lightning-input-field field-name="Company__c"></lightning-input-field>
+                        <lightning-input-field field-name="Role__c"></lightning-input-field>
+                        <lightning-input-field field-name="Location__c"></lightning-input-field>
+                        <lightning-input-field field-name="From_Date__c"></lightning-input-field>
+                        <lightning-input-field field-name="To_Date__c"></lightning-input-field>
+                        <lightning-input-field field-name="Responsibilities__c"></lightning-input-field>
+                        <div class="slds-m-top_medium">
+                            <lightning-button variant="neutral" label="Cancel" onclick={handleCloseModal}></lightning-button>
+                            <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
+                        </div>
+                    </lightning-record-edit-form>
+                </div>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
+
+    <!-- Edit Responsibilities Modal -->
+    <template if:true={showResponsibilitiesModal}>
+        <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" 
+                            title="Close" onclick={handleCloseResponsibilitiesModal}>
+                        <lightning-icon icon-name="utility:close" alternative-text="close" size="small"></lightning-icon>
+                    </button>
+                    <h2 class="slds-text-heading_medium">Edit Responsibilities</h2>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium">
+                    <lightning-input-rich-text 
+                        label="Responsibilities" 
+                        value={editingResponsibilities}
+                        onchange={handleResponsibilitiesChange}
+                        formats="font,size,bold,italic,underline,strike,list,indent,align,link,clean">
+                    </lightning-input-rich-text>
+                </div>
+                <footer class="slds-modal__footer">
+                    <lightning-button variant="neutral" label="Cancel" onclick={handleCloseResponsibilitiesModal}></lightning-button>
+                    <lightning-button variant="brand" label="Save" onclick={handleSaveResponsibilities}></lightning-button>
+                </footer>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
 </template>
